--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,18 @@
     <junit.version>4.12</junit.version>
     <jstl.version>1.2</jstl.version>
     <lombok.version>1.16.4</lombok.version>
+    <jsp-api.version>2.2</jsp-api.version>
+
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>${jsp-api.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -101,5 +110,23 @@
 
   <build>
     <finalName>Project4</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <warSourceDirectory>WebContent</warSourceDirectory>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
