--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <jstl.version>1.2</jstl.version>
     <lombok.version>1.16.4</lombok.version>
     <jsp-api.version>2.2</jsp-api.version>
-
+    <validation.version>1.1.0.Final</validation.version>
   </properties>
 
   <dependencies>
@@ -29,6 +29,12 @@
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
       <version>${jsp-api.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${validation.version}</version>
     </dependency>
 
     <dependency>
