--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <hibernate.version>4.3.6.Final</hibernate.version>
     <mysql.version>5.1.31</mysql.version>
     <spring.security.version>4.1.0.RELEASE</spring.security.version>
-    <c3po.version>3.6.3.Final</c3po.version>
+    <c3p0.version>3.6.3.Final</c3p0.version>
     <log4j.version>1.2.17</log4j.version>
     <junit.version>4.12</junit.version>
     <jstl.version>1.2</jstl.version>
