--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
+# Program validator patterns
 email.pattern = ^[_A-Za-z0-9-+]+(.[_A-Za-z0-9-]+)*@" + "[A-Za-z0-9-]+(.[A-Za-z0-9]+)*(.[A-Za-z]{2,})$
 
+# Database configs
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/project4v2
 jdbc.username = root
 jdbc.password = root
 
+# Hibernate configs
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = false
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto = create
 hibernate.hbm2ddl.import_files = scriptsSQL/dev_data.sql
 hibernate.hbm2ddl.import_files_sql_extractor = org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+
+# C3P0 configs
+c3p0.minPoolSize=5
+c3p0.maxPoolSize=20
+c3p0.maxIdleTime=300
+c3p0.idleConnectionTestPeriod=3000
+c3p0.maxStatements=50
