--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <lombok.version>1.16.4</lombok.version>
     <jsp-api.version>2.2</jsp-api.version>
     <validation.version>1.1.0.Final</validation.version>
+    <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
   </properties>
 
   <dependencies>
@@ -120,6 +121,13 @@
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
     </dependency>
+
+    <!-- Servlet API, JSTL -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${javax.servlet-api.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -137,7 +145,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
+          <warSourceDirectory>src/main/webapp</warSourceDirectory>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
