--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ hibernate.hbm2ddl.import_files = scriptsSQL/dev_data.sql
 hibernate.hbm2ddl.import_files_sql_extractor = org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 
 # C3P0 configs
-c3p0.minPoolSize=5
-c3p0.maxPoolSize=20
-c3p0.maxIdleTime=300
-c3p0.idleConnectionTestPeriod=3000
-c3p0.maxStatements=50
+c3p0.minPoolSize = 5
+c3p0.maxPoolSize = 20
+c3p0.timeout = 300
+c3p0.max_statements = 50
+c3p0.idle_test_period = 3000
