The database mapping done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ email.pattern = ^[_A-Za-z0-9-+]+(.[_A-Za-z0-9-]+)*@" + "[A-Za-z0-9-]+(.[A-Za-z0-
 
 # Database configs
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/project4v2
+jdbc.url = jdbc:mysql://localhost:3306/project4v2?characterEncoding=UTF-8
 jdbc.username = root
 jdbc.password = root
 
