--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ jdbc.password = root
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = false
 hibernate.format_sql = true
-hibernate.hbm2ddl.auto = create
+hibernate.hbm2ddl.auto = update
 hibernate.hbm2ddl.import_files = scriptsSQL/dev_data.sql
 hibernate.hbm2ddl.import_files_sql_extractor = org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 
