Begin to add tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ c3p0.maxPoolSize = 20
 c3p0.timeout = 300
 c3p0.max_statements = 50
 c3p0.idle_test_period = 3000
+
+# For JUnit com.epam.test
+jdbc.url.com.epam.test = jdbc:mysql://localhost:3306/project4v2Test?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+hibernate.hbm2ddl.auto.com.epam.test = create
