--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ email.pattern = ^[_A-Za-z0-9-+]+(.[_A-Za-z0-9-]+)*@" + "[A-Za-z0-9-]+(.[A-Za-z0-
 
 # Database configs
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/project4v2?useUnicode=yes&characterEncoding=UTF-8
+jdbc.url = jdbc:mysql://localhost:3306/project4v2?&useUnicode=yes&characterEncoding=utf-8
 jdbc.username = root
 jdbc.password = root
 
 # Hibernate configs
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = false
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto = update
