--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ jdbc.password = root
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = false
 hibernate.format_sql = true
-hibernate.hbm2ddl.auto = update
+hibernate.hbm2ddl.auto = create
 hibernate.hbm2ddl.import_files = scriptsSQL/dev_data.sql
 hibernate.hbm2ddl.import_files_sql_extractor = org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 
@@ -23,5 +23,5 @@ c3p0.max_statements = 50
 c3p0.idle_test_period = 3000
 
 # For JUnit com.epam.test
-jdbc.url.com.epam.test = jdbc:mysql://localhost:3306/project4v2Test?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-hibernate.hbm2ddl.auto.com.epam.test = create
+jdbc.url.test = jdbc:mysql://localhost:3306/project4v2Test?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+hibernate.hbm2ddl.auto.test = create-drop
