--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Program validator patterns
 email.pattern = ^[_A-Za-z0-9-+]+(.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(.[A-Za-z0-9]+)*(.[A-Za-z]{2,})$
+min.step = 0.01
 
 # Database configs
 jdbc.driverClassName = com.mysql.jdbc.Driver
