--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epam</groupId>
-  <artifactId>EPAM2.0_Project4_v2.0</artifactId>
+  <artifactId>Course2.0_Project4_v2.0</artifactId>
   <packaging>war</packaging>
   <version>2.0-Annotations</version>
   <name>Project4 Maven Webapp</name>
@@ -21,9 +21,16 @@
     <jsp-api.version>2.2</jsp-api.version>
     <validation.version>1.1.0.Final</validation.version>
     <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+    <mockito.version>1.10.19</mockito.version>
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>${mockito.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
@@ -142,7 +149,7 @@
   </dependencies>
 
   <build>
-    <finalName>EPAM2.0_Project4_v2.0</finalName>
+    <finalName>Course2.0_Project4_v2.0</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
