--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ c3p0.timeout = 300
 c3p0.max_statements = 50
 c3p0.idle_test_period = 3000
 
-# For JUnit com.epam.test
+# For JUnit com.coursese.test
 jdbc.url.test = jdbc:mysql://localhost:3306/project4v2Test?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 hibernate.hbm2ddl.auto.test = create-drop
